# PCSC-contrib

./: .gitignore  README  README.md  get_PCSC_Part10_features.py  list_pcsc_applications.sh  log_macOS.sh  log_macOS_Sonoma.sh  log_macOS_ifdbundle.sh  log_pcscd.sh  ltrace.conf  parse_PCSC_Part10_features.py  pcsc-bench.pl  pcscd_perfs.py  plist2txt.py  uncolor.pl
dbus/: README  pcsc_watcher.py
libPCSCv2part10/: Makefile.am  PCSCv2part10.c  PCSCv2part10.h  configure.ac  configure.in  doxygen.conf  sample.c  unit_test.c  update.sh
